--- a/server/public/index.html
+++ b/server/public/index.html
@@ -100,7 +100,7 @@
     <!-- Table -->
     <div class="flex flex-wrap justify-center m-6">
       <div class="overflow-x-auto">
-        <table class="table table-zebra w-full">
+        <table id="dbtable" class="table table-zebra w-full">
           <!-- head -->
           <thead>
             <tr>
